--- a/style.css
+++ b/style.css
@@ -79,3 +79,22 @@ h1 {
   margin: 2px;
   border-radius: 4px;
 }
+
+.social {
+  display: flex;
+  justify-content: space-around;
+  padding: 18px;
+}
+.social li {
+  list-style: none;
+  font-size: 12px;
+}
+.social li a {
+  text-decoration: none;
+  color: white;
+  font-size: 12px;
+}
+.icons {
+  color: white;
+  font-size: 12px;
+}
